--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -58,8 +58,8 @@
                         <NavigationViewItem Icon="Mail" Content="Wiadomości" Tag="MessagesPage" />
                         <NavigationViewItem Icon="Save" Content="Sprawdziany i zadania domowe" Tag="DeadlineablePage" />
                         <NavigationViewItem Icon="Folder" Content="Uwagi i pochwały" Tag="NotesPage" />
-                        <NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />
-                        <NavigationViewItem Icon="Save" Content="Preferencje" Tag="PreferencesViewer" />
+                        <!--<NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />-->
+                        <!--<NavigationViewItem Icon="Save" Content="Preferencje" Tag="PreferencesViewer" />-->
                         <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
                 <NavigationViewItem Icon="Download" Content="Menu Item4" Tag="SamplePage4" />-->
                     </NavigationView.MenuItems>
@@ -67,7 +67,10 @@
                     <NavigationView.PaneCustomContent>
                         <Grid HorizontalAlignment="Stretch">
                             <Grid HorizontalAlignment="Right">
-                                <Button Width="45" Height="45" Background="Transparent" x:Name="changeAccountButton">
+                                <Button Width="45" Height="45" Background="Transparent" x:Name="changeAccountButton" BorderThickness="0">
+                                    <Button.Content>
+                                        <SymbolIcon Symbol="People"/>
+                                    </Button.Content>
                                 </Button>
                             </Grid>
                         </Grid>
