Przygotowanie do wydania (zmiana nazw na Vulcanoid)

--- a/VulcanForWindows/LoginPage.xaml
+++ b/VulcanForWindows/LoginPage.xaml
@@ -20,10 +20,11 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Text="Vulcan dla Windows" FontWeight="Bold" FontSize="32" TextAlignment="Center"/>
-                    <TextBlock x:Name="verDisplay" FontSize="12" Foreground="Silver" TextAlignment="Center" HorizontalAlignment="Right" Grid.Row="1"/>
-                    <TextBlock Text="by mx2rel" FontSize="12" Foreground="Silver" TextAlignment="Center" HorizontalAlignment="Left" Grid.Row="1"/>
+                    <TextBlock Text="Witaj w Vulcanoid!" FontWeight="Bold" FontSize="32" TextAlignment="Center"/>
+                    <TextBlock x:Name="verDisplay" FontSize="12" Foreground="Silver" TextAlignment="Center" HorizontalAlignment="Right" Grid.Row="2"/>
+                    <TextBlock Text="by mx2rel" FontSize="12" Foreground="Silver" TextAlignment="Center" HorizontalAlignment="Left" Grid.Row="2"/>
 
                 </Grid>
             </StackPanel>
