--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -25,7 +25,7 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Image Source="/Assets/StoreLogo.png" Height="16" Width="16" Grid.Column="1" VerticalAlignment="Center"/>
-                <TextBlock Style="{StaticResource AppTitle}" Grid.Column="2">Vulcan dla Windows</TextBlock>
+                <TextBlock Style="{StaticResource AppTitle}" Grid.Column="2">E-Dziennik Vulcanoid</TextBlock>
             </Grid>
             <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
